--- a/package.json
+++ b/package.json
@@ -5,24 +5,30 @@
   "author": "Patrick Weingärtner",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "dev:debug": "node --inspect-brk node_modules/.bin/nuxt",
+    "dev": "nuxt --port 3001",
+    "dev:debug": "nodemon --inspect-brk node_modules/.bin/nuxt --port 3001",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/axios": "^5.4.1",
+    "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/vuetify": "^0.5.5",
     "cross-env": "^5.2.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
+    "nuxt-fontawesome": "^0.4.0",
     "nuxt-material-design-icons": "^1.0.4",
     "nuxt-vue-material": "^1.1.0",
     "sass-loader": "^7.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.10"
   }
 }
