--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/axios": "^5.4.1",
+    "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/vuetify": "^0.5.5",
     "cross-env": "^5.2.0",
