--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxt/http": "^0.1.1",
+    "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/vuetify": "^0.5.5",
