--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ax2/dayjs-module": "^0.1.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-regular-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxt/http": "^0.1.1",
