--- a/package.json
+++ b/package.json
@@ -24,14 +24,23 @@
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/vuetify": "^0.5.5",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-leaflet": "^0.0.18",
     "nuxt-material-design-icons": "^1.0.4",
+    "nuxt-svg-loader": "^1.0.1",
     "nuxt-vue-material": "^1.1.0",
+    "nuxt-webfontloader": "^1.1.0",
+    "qs": "^6.7.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-svg-loader": "^0.12.0",
+    "vue-tiny-slider": "^0.1.35",
     "vuex-persist": "^2.0.0"
   },
   "devDependencies": {
