--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxt/http": "^0.1.1",
-    "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/vuetify": "^0.5.5",
+    "cookie": "^0.4.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "nuxt": "^2.8.1",
