--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Patrick Weingärtner",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development nuxt --port 3001",
+    "dev": "NODE_ENV=development NUXT_HOST=0.0.0.0 nuxt --port 3001",
     "prod": "NODE_ENV=production nuxt --port 3001",
     "dev:debug": "NODE_ENV=development nodemon --inspect node_modules/.bin/nuxt --port 3001",
     "prod:debug": "NODE_ENV=production nodemon --inspect node_modules/.bin/nuxt --port 3001",
