--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxt/http": "^0.1.1",
     "@nuxtjs/dotenv": "^1.3.0",
+    "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/vuetify": "^0.5.5",
     "cookie": "^0.4.0",
