--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "vue-markdown": "^2.2.4",
     "vue-svg-loader": "^0.12.0",
     "vue-tiny-slider": "^0.1.35"
   },
